1.1.5 --Terminate (term) now allows termination of scripts or non-press mixes. Still working on presses.-- Also fixed up some batch files.