@@ -1,6 +1,8 @@
 package jPlus.util.io;
 
 import jPlus.lang.SystemUtils;
+import jPlus.lang.callback.Receivable1;
+import jdk.jshell.spi.ExecutionControl.NotImplementedException;
 
 import java.io.IOException;
 
@@ -19,28 +21,59 @@ public class RuntimeUtils {
         return false;
     }
 
-    public static void execWait(String... process) throws IOException, InterruptedException {
-        ProcessBuilder pb = new ProcessBuilder(process);
-        Process startProcess = pb.inheritIO().start();
-        startProcess.waitFor();
+    public static void execWait(String... body) throws IOException, InterruptedException {
+        Runtime.getRuntime().exec(body).waitFor();
     }
 
     public static void execWaitBliss(String... body) {
+        execWaitBliss(Throwable::printStackTrace, body);
+    }
+
+    public static void execWaitBliss(Receivable1<InterruptedException> onInterrupt, String... body) {
         try {
             execWait(body);
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             e.printStackTrace();
+        } catch (InterruptedException e) {
+            onInterrupt.receive(e);
         }
     }
 
     //***************************************************************//
 
-    public static String cmdStartString(String path) {
-        return "cmd.exe /c start \"\" \"" + path + "\"";
+    public static String[] startSWin(String path, String title) {
+        return new String[]{"cmd", "/c", "start", "\"" + TASK_LIST_PREPEND + title + "\"", "/wait", "\"" + path + "\""};
     }
 
-    public static String[] cmdWaitStringArr(String path) {
-        return new String[]{"cmd", "/c", "start", "/wait", "\"\"", "\"" + path + "\""};
+    //***************************************************************//
+
+    public static boolean kill(String path, String title) throws NotImplementedException, IOException {
+        final SystemUtils.OS os = SystemUtils.getOS();
+        switch (os) {
+            case WINDOWS:
+                return exec(killWin(path, title));
+            case LINUX:
+                throw new NotImplementedException("end linux task");
+            case MAC:
+                throw new NotImplementedException("end mac task");
+            case SOLARIS:
+                throw new NotImplementedException("end solaris task");
+            default:
+                return false;
+        }
+    }
+
+    public static boolean killBliss(String path, String title) {
+        try {
+            return kill(path, title);
+        } catch (Exception ex) {
+            ex.printStackTrace();
+        }
+        return false;
+    }
+
+    public static String[] killWin(String path, String title) {
+        return new String[]{"cmd", "/c", "Taskkill /FI \"WINDOWTITLE eq " + TASK_LIST_PREPEND + title + " - " + path + "\""};
     }
 
     //***************************************************************//
@@ -84,5 +117,13 @@ public class RuntimeUtils {
 
     private static boolean webWin(String url) {
         return execBliss("rundll32 url.dll,FileProtocolHandler " + url);
+    }
+
+    //***************************************************************//
+
+    public static String TASK_LIST_PREPEND = "SOMECUSTOMIDHERE";
+
+    public static String sep() {
+        return System.lineSeparator();
     }
 }
